--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>anthunt.aws</groupId>
   <artifactId>aws-exporter</artifactId>
-  <version>2.0.2-RELEASE</version>
+  <version>2.0.3-RELEASE</version>
   
   <name>aws-exporter</name>
   
@@ -164,6 +164,7 @@
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-assembly-plugin</artifactId>
+			    <version>2.4</version>
 			    <configuration>
 			        <archive>
 			            <manifest>
@@ -171,9 +172,9 @@
 			            </manifest>
 			        </archive>
 			        <descriptors>
-			        	<descriptor>/jar-with-dependencies.xml</descriptor>
+			        	<descriptor>/full.xml</descriptor>
 			        </descriptors>
-			        <attach>false</attach>
+			        <attach>true</attach>
 			    </configuration>
 			    <executions>
 			        <execution>
