--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>anthunt.aws</groupId>
   <artifactId>aws-exporter</artifactId>
-  <version>2.0.3-RELEASE</version>
+  <version>2.1.0-SNAPSHOT</version>
   
   <name>aws-exporter</name>
   
@@ -168,7 +168,7 @@
 			    <configuration>
 			        <archive>
 			            <manifest>
-			                <mainClass>anthunt.aws.exporter.Installer</mainClass>
+			                <mainClass>anthunt.aws.exporter.install.Installer</mainClass>
 			            </manifest>
 			        </archive>
 			        <descriptors>
