--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 	   </repository>
 	</distributionManagement>
 	
+	<profiles>
+		<profile><id>github</id></profile>
+	</profiles>
+	
     <dependencyManagement>
 
         <dependencies> 
