--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: java
+
 before_install:
- script: "cp .settings.xml $HOME/.m2/settings.xml"
+  - cp .settings.xml $HOME/.m2/settings.xml
+  
 install: mvn install -Pgithub -DskipTests=true -Dmaven.javadoc.skip=true -B -V
