--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
 before_install:
-  - cp .settings.xml $HOME/.m2/settings.xml
+  - sed 's/_GITHUB_TOKEN/$GITHUB_TOKEN/g' .settings.xml > $HOME/.m2/settings.xml
   
 install: mvn install -Pgithub -DskipTests=true -Dmaven.javadoc.skip=true -B -V
