--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,10 +21,13 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
+    - name: Pre Settings for build
+      run: sed "s/_GITHUB_TOKEN/${{ github.token }}/g" .settings.xml > ${{ github.workspace }}/settings.xml
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -Pgithub -DskipTests=true -Dmaven.javadoc.skip=true -B -V
       env:
         GITHUB_TOKEN: ${{ github.token }}
