--- a/pom.xml
+++ b/pom.xml
@@ -26,21 +26,23 @@
     </properties>
 
 	<distributionManagement>
-	   <repository>
-	     <id>github</id>
-	     <name>GitHub OWNER Apache Maven Packages</name>
-	     <url>https://maven.pkg.github.com/anthunt/aws-exporter</url>
-	   </repository>
-	   <repository>
-	     <id>github</id>
-             <name>Poi Helper Repository</name>
-             <url>https://maven.pkg.github.com/anthunt/poi-helper</url>
-	   </repository>
-	   <repository>
-	     <id>github</id>
-	     <name>mvn-artifact-downloader</name>
-	     <url>https://maven.pkg.github.com/anthunt/mvn-artifact-downloader</url>
-	   </repository>
+		<repositories>
+			   <repository>
+			     <id>github</id>
+			     <name>GitHub OWNER Apache Maven Packages</name>
+			     <url>https://maven.pkg.github.com/anthunt/aws-exporter</url>
+			   </repository>
+			   <repository>
+			     <id>github</id>
+			     <name>Poi Helper Repository</name>
+			     <url>https://maven.pkg.github.com/anthunt/poi-helper</url>
+			   </repository>
+			   <repository>
+			     <id>github</id>
+			     <name>mvn-artifact-downloader</name>
+			     <url>https://maven.pkg.github.com/anthunt/mvn-artifact-downloader</url>
+			   </repository>
+		</repositories>
 	</distributionManagement>
 		
     <dependencyManagement>
