--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: 8
+        distribution: 'adopt'
     - name: Build with Maven
       run: mvn -s .settings.xml --batch-mode deploy --file pom.xml
       env:
