--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: 8
         distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -s .settings.xml --batch-mode deploy --file pom.xml
+      run: mvn -s .settings.xml -B package --file pom.xml
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
