--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v2
+    - uses: actions/setup-java@v2
       with:
         java-version: 8
         distribution: 'adopt'
@@ -26,4 +26,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2.1.4
+      with:
+        name: aws-exporter-3.0.2-RELEASE-full.jar
+        path: target
