--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,17 +16,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Set up JDK 1.8
     - uses: actions/setup-java@v2
       with:
         java-version: 8
         distribution: 'adopt'
+        
     - name: Build with Maven
       run: mvn -s .settings.xml -B package --file pom.xml
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-    - uses: actions/upload-artifact@v2.1.4
+    
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2.1.4
       with:
         name: aws-exporter-3.0.2-RELEASE-full.jar
         path: target
