--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2.1.4
+    - uses: actions/upload-artifact@v2.1.4
       with:
-        name: aws-exporter-3.0.2-RELEASE-full.jar
-        path: target
+        name: Upload Artifact
+        path: ${{ github.workspace }}/target/*
