--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,21 +15,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up JDK 1.8
-    - uses: actions/setup-java@v2
-      with:
-        java-version: 8
-        distribution: 'adopt'
-        
-    - name: Build with Maven
-      run: mvn -s .settings.xml -B package --file pom.xml
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-    
-    - uses: actions/upload-artifact@v2.1.4
-      with:
-        name: Upload Artifact
-        path: ${{ github.workspace }}/target/*
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 1.8
+      - uses: actions/setup-java@v2
+        with:
+          java-version: 8
+          distribution: 'adopt'
+
+      - name: Build with Maven
+        run: mvn -s .settings.xml -B package --file pom.xml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+      - uses: actions/upload-artifact@v2.2.4
+        with:
+          name: Upload Artifact
+          path: ${{ github.workspace }}/target/*.jar
