--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up JDK 1.8
-      - uses: actions/setup-java@v2
+        uses: actions/setup-java@v2
         with:
           java-version: 8
           distribution: 'adopt'
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
-      - uses: actions/upload-artifact@v2.2.4
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.4
         with:
-          name: Upload Artifact
           path: ${{ github.workspace }}/target/*.jar
