--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -34,6 +34,19 @@ jobs:
       with:
         path: ${{ github.workspace }}/target/*.jar
     
+    - name: Generate changelog
+      id: Changelog
+      uses: heinrichreimer/action-github-changelog-generator@v2.2
+      with:
+        # Target GitHub repo in the form of organization/repository.
+        repo: anthunt/aws-exporter
+        # Username of the owner of target GitHub repo.
+        user: anthunt
+        # Name of project on GitHub.
+        project: aws-exporter
+        # To make more than 50 requests per hour your GitHub token is required.
+        token: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: release
       uses: actions/create-release@v1
       id: create_release
@@ -42,7 +55,7 @@ jobs:
         prerelease: false
         release_name: Release ${{ github.ref }}
         tag_name: ${{ github.ref }}
-        body_path: CHANGELOG.md
+        body_path: ${{ steps.Changelog.outputs.changelog }}
       env:
         GITHUB_TOKEN: ${{ github.token }}
     
