--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Get Tag Name
       id: tag
-      uses: ashley-taylor/regex-property-action@v1.2
+      uses: ashley-taylor/regex-property-action@1.2
       with:
         value: ${{ github.ref }}
         regex: ".*/"
