--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -70,7 +70,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
     
     - name: Make zip
-      run: zip --junk-paths aws-exporter-${{ steps.tag.outputs.value }} target/*.jar
+      run: zip aws-exporter-${{ steps.tag.outputs.value }}.zip target/*.jar
       
     - name: Upload Release Artifact
       uses: actions/upload-release-asset@v1.0.2
