--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 			<dependency>
 			    <groupId>org.apache.poi</groupId>
 			    <artifactId>poi-ooxml-schemas</artifactId>
-			    <version>${poi.version}</version>
+			    <version>4.1.2</version>
 			</dependency>
 			
 			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
