--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>anthunt.aws</groupId>
   <artifactId>aws-exporter</artifactId>
-  <version>3.1.3-RELEASE</version>
+  <version>3.1.4-RELEASE</version>
   <name>aws-exporter</name>
   <licenses>
     <license>
@@ -94,6 +94,18 @@
 			    <groupId>org.apache.poi</groupId>
 			    <artifactId>poi-excelant</artifactId>
 			    <version>${poi.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>anthunt.poi</groupId>
+				<artifactId>poi-helper</artifactId>
+				<version>${poi-helper.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>anthunt.mvn</groupId>
+				<artifactId>mvn-artifact-downloader</artifactId>
+				<version>${mvn-artifact-downloader.version}</version>
 			</dependency>
         </dependencies>
 
