--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,13 @@
 			<version>2.17.68</version>
 			<scope>provided</scope>
 		</dependency>
+		
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>autoscaling</artifactId>
+			<version>2.17.68</version>
+			<scope>provided</scope>
+        </dependency>
 
 		<dependency>
         	<groupId>org.apache.poi</groupId>
